--- a/s03_Activity/MyIntent/app/src/main/res/layout/activity_second.xml
+++ b/s03_Activity/MyIntent/app/src/main/res/layout/activity_second.xml
@@ -5,5 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="2nd Activity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
